Added some extra stuff to index and script files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="">
+        <label for="countryInput">Country Name</label>
+        <input id= "countryInput" type="text" placeholder="Enter country name">
+        <input type="submit">
+    </form>
+    <section id="country-info">
+
+    </section>
+    <section id="bordering-countries">
+
+    </section>
 </body>
 </html>
