--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+    <form id="countryForm">
         <label for="countryInput">Country Name</label>
         <input id= "countryInput" type="text" placeholder="Enter country name">
         <input type="submit">
     </form>
     <section id="country-info">
         <ul>
-            
+
         </ul>
     </section>
     <section id="bordering-countries">
