--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <form id="countryForm">
         <label for="countryInput">Country Name</label>
         <input id= "countryInput" type="text" placeholder="Enter country name">
-        <input type="submit">
+        <input type="submit" value="Submit">
     </form>
     <section id="country-info">
-        <ul>
+        <ul id="countryDetails">
 
         </ul>
     </section>
     <section id="bordering-countries">
-        <ul>
+        <ul id="borderDetails">
         </ul>
     </section>
 </body>
