--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Country Details</title>
 </head>
 <body>
     <form id="countryForm">
